--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -1,55 +1,134 @@
 /* General Styles */
-*{
-    -fx-font-family: 'Arial';
+
+@font-face {
+    font-family: 'Krona One';
+    src: url(../Fonts/KronaOne-Regular.ttf);
 }
 
+*{
+    -fx-font-family: "Krona One";
+    -fx-primary-color: #B8ACFF;
+    -fx-secondary-color: #D0C9FF;
+    -fx-tertiary-color: #000119;
+    -fx-light-grey-color: #C8C8C8;
+
+   	-fx-focus-color: -fx-secondary-color;
+}
+
+.date-picker {
+    -fx-background-color: transparent;
+}
+
+.date-picker .arrow-button {
+	-fx-background-color: -fx-primary-color;
+	-fx-background-radius: 0;
+}
+.date-picker .arrow-button:hover {
+	-fx-background-color: -fx-secondary-color;
+}
+.date-picker .arrow-button .arrow {
+	-fx-background-color: white;
+}
+.date-picker .cell {
+	-fx-background-color: white;
+}
+.date-picker .cell:hover {
+	-fx-background-color: -fx-light-grey-color;
+}
+.date-picker .cell:focused {
+	-fx-background-color: -fx-light-grey-color;
+}
+.date-picker .selected {
+	-fx-background-color: -fx-primary-color;
+	-fx-text-fill: white;
+}
+.date-picker .selected:focused {
+	-fx-background-color: -fx-primary-color;
+	-fx-text-fill: white;
+}
+.date-picker-popup  {
+	-fx-border-color: transparent;
+}
+.date-picker-popup .month-year-pane {
+	-fx-background-color: -fx-primary-color;
+}
+.date-picker-popup .month-year-pane .label {
+	-fx-text-fill: white;
+}
+.date-picker-popup .week-number-cell {
+	-fx-text-fill: -fx-secondary-color;
+}
+.date-picker-popup .spinner .button .left-arrow,
+.date-picker-popup .spinner .button .right-arrow {
+	-fx-background-color: white;
+}
+
+.check-box .box {
+	-fx-background-color: white;
+	-fx-border-color: transparent;
+	-fx-border-radius: 5;
+}
+.check-box .mark {
+ 	-fx-shape: "M1.73,12.91 8.1,19.28 22.79,4.59 22.79,1.59 8.1,16.28 1.73,9.91";
+}
+.check-box:selected .mark {
+	-fx-background-color: white;
+}
+.check-box:selected .box {
+	-fx-background-color: -fx-primary-color;
+}
+
+
 .root {
-    -fx-font-family: 'Roboto', sans-serif;
-    -fx-background-color: #0f0d25;
+    -fx-font-family: "Krona One";
+    -fx-background-color: -fx-tertiary-color;
     -fx-text-fill: #ffffff;
 }
 
-/* Button Styles */
-.button {
-    -fx-background-color: #d9d1f7;
-    -fx-text-fill: #0f0d25;
-    -fx-font-size: 14px;
-    -fx-padding: 10px 20px;
-    -fx-background-radius: 30;
-}
 
 .whitePane{
-    -fx-background-color: #505050;
+    -fx-background-color: #ffffff;
+}
+
+
+/* Button Styles */
+
+.button {
+    -fx-background-color: -fx-primary-color;
+    -fx-text-fill: #ffffff;
+    -fx-font-family: "Krona One";
+    -fx-background-radius: 43;
+    -fx-font-size: 14px;
+    -fx-padding: 10px 20px;
 }
 
 .button:hover {
-    -fx-background-color: #c0b3f0;
+    -fx-background-color: #-fx-secondary-color;
 }
 
 .button:pressed {
-    -fx-background-color: #b0a3e0;
+    -fx-background-color: #-fx-secondary-color;
 }
 
-/* TextField and PasswordField Styles */
-.text-field, .password-field {
-    -fx-background-color: #ffffff;
-    -fx-text-fill: #0f0d25;
-    -fx-padding: 10px;
-    -fx-background-radius: 5;
-    -fx-border-color: transparent;
+/* TextField */
+
+.text-field, password-field {
+	-fx-accent: -fx-primary-color;
+	-fx-background-color: white;
+	-fx-background-insets: 0, 0 0 1 0;
+	-fx-background-radius: 20;
 }
 
-.text-field:focused, .password-field:focused {
-    -fx-border-color: #d9d1f7;
-    -fx-background-insets: 0, 1;
-    -fx-background-radius: 5;
+.text-field:focused, password-field:focused {
+	-fx-background-color: -fx-primary-color, white;
 }
 
-/* Label Styles */
-.label {
-    -fx-text-fill: #ffffff;
-    -fx-font-size: 16px;
+/* Image Styles */
+.image {
+    -fx-padding: 10px
 }
+
+
 
 /* Sidebar Styles */
 .sidebar {
@@ -137,13 +216,16 @@
     -fx-background-radius: 20;
 }
 
-/* Title Styles */
-.title {
-    -fx-text-fill: #ffffff;
-    -fx-font-size: 24px;
-    -fx-font-weight: bold;
+/* Label Styles */
+#title {
+    -fx-text-fill: -fx-tertiary-color;
+    -fx-font-size: 48px;
 }
 
+#statumun {
+    -fx-text-fill: white;
+    -fx-font-size: 24;
+}
 /* User Info Styles */
 .user-info {
     -fx-text-fill: #ffffff;
