--- a/src/assets/FXML/LoginScene.fxml
+++ b/src/assets/FXML/LoginScene.fxml
@@ -1,36 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<Scene stylesheets="@../CSS/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
-    <AnchorPane prefHeight="509.0" prefWidth="741.0">
-      <children>
-         <ImageView fitHeight="45.0" fitWidth="58.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@../Images/logo.png" />
-            </image></ImageView>
-
-         <Label layoutX="55.0" layoutY="12.0" prefWidth="84.0" text="Statumun">
-            <font>
-               <Font name="Arial Black" size="20.0" />
-            </font>
-         </Label>
-         <Pane id="wihtePane" layoutX="155.0" layoutY="87.0" prefHeight="334.0" prefWidth="431.0" style="-fx-background-color: #e1e1e1; -fx-border-radius: 30; -fx-background-radius: 30;">
+<Scene stylesheets="@../CSS/style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+    <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="820.0" prefWidth="1537.0">
+        <children>
+         <GridPane layoutX="31.0" layoutY="17.0" prefHeight="91.0" prefWidth="274.0">
+           <columnConstraints>
+             <ColumnConstraints hgrow="SOMETIMES" maxWidth="129.5333251953125" minWidth="10.0" prefWidth="100.73332214355469" />
+             <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.40001678466797" minWidth="10.0" prefWidth="173.2666778564453" />
+           </columnConstraints>
+           <rowConstraints>
+             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+           </rowConstraints>
             <children>
-               <TextField fx:id="textfield_username_connexion" layoutX="81.0" layoutY="65.0" prefHeight="39.0" prefWidth="254.0" promptText="Nom d'utilisateur" style="-fx-background-radius: 30;" />
-               <Label contentDisplay="CENTER" layoutX="136.0" layoutY="14.0" style="-fx-text-fill: #0f0d25; -fx-font-family: Arial; -fx-font-size: 30;" text="Connexion" textAlignment="JUSTIFY" />
-               <Button fx:id="button_login_connexion" layoutX="148.0" layoutY="182.0" mnemonicParsing="false" onAction="#tryLogin" text="Se connecter" />
-               <Button fx:id="button_register_connexion" layoutX="161.0" layoutY="254.0" mnemonicParsing="false" onAction="#openRegisterPage" style="-fx-background-color: #505050; -fx-text-fill: #ffffff;" text="S'inscrire" />
-               <TextField fx:id="textfield_psswrd_connexion" layoutX="81.0" layoutY="123.0" prefHeight="39.0" prefWidth="254.0" promptText="Mot de passe" style="-fx-background-radius: 30;" />
+                  <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                      <image>
+                          <Image url="@../Images/logo.png" />
+                      </image>
+                  </ImageView>
+               <Label id="statumun" text="Statumun" GridPane.columnIndex="1" />
             </children>
-         </Pane>
-      </children></AnchorPane>
+         </GridPane>
+         <GridPane layoutX="454.0" layoutY="101.0" prefHeight="619.0" prefWidth="628.0" style="-fx-background-color: #F4F4F4; -fx-background-radius: 43;">
+           <columnConstraints>
+               <ColumnConstraints />
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+           </columnConstraints>
+           <rowConstraints>
+             <RowConstraints />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+           </rowConstraints>
+            <children>
+               <Label id="title" text="Connexion" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+               <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="71.0" prefWidth="419.0" promptText="Mail" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                  <padding>
+                     <Insets left="20.0" />
+                  </padding>
+                  <GridPane.margin>
+                     <Insets top="30.0" />
+                  </GridPane.margin>
+               </TextField>
+               <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="419.0" style="-fx-background-color: #B8ACFF; -fx-background-radius: 43;" text="Se Connecter" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+                  <GridPane.margin>
+                     <Insets top="5.0" />
+                  </GridPane.margin>
+               </Button>
+               <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="240.0" style="-fx-background-color: false; -fx-text-fill: #000000; -fx-opacity: 50%; -fx-font-size: 10;" text="Mot de passe oublié ?" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+                  <GridPane.margin>
+                     <Insets top="65.0" />
+                  </GridPane.margin>
+                  <opaqueInsets>
+                     <Insets />
+                  </opaqueInsets>
+               </Button>
+               <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="419.0" style="-fx-background-color: #C8C8C8; -fx-background-radius: 43;" text="S'inscrire" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP">
+                  <GridPane.margin>
+                     <Insets />
+                  </GridPane.margin>
+               </Button>
+               <PasswordField maxWidth="-Infinity" prefHeight="71.0" prefWidth="419.0" promptText="Mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                  <GridPane.margin>
+                     <Insets bottom="30.0" />
+                  </GridPane.margin>
+                  <padding>
+                     <Insets left="20.0" />
+                  </padding>
+               </PasswordField>
+            </children>
+         </GridPane>
+        </children>
+    </AnchorPane>
 </Scene>
