--- a/src/assets/FXML/RegisterScene.fxml
+++ b/src/assets/FXML/RegisterScene.fxml
@@ -1,37 +1,113 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<Scene stylesheets="@../CSS/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
-    <AnchorPane prefHeight="509.0" prefWidth="741.0">
-      <children>
-         <ImageView fitHeight="57.0" fitWidth="65.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@../Images/logo.png" />
-            </image>
-         </ImageView>
-         <Label layoutX="55.0" layoutY="12.0" prefWidth="84.0" text="Statumun">
-            <font>
-               <Font name="Arial Black" size="20.0" />
-            </font>
-         </Label>
-         <Pane id="wihtePane" layoutX="155.0" layoutY="87.0" prefHeight="367.0" prefWidth="431.0" style="-fx-background-color: #e1e1e1; -fx-border-radius: 30; -fx-background-radius: 30;">
-            <children>
-               <TextField fx:id="textfield_username_register" layoutX="81.0" layoutY="65.0" prefHeight="39.0" prefWidth="254.0" promptText="Nom d'utilisateur" style="-fx-background-radius: 30;" />
-               <Label contentDisplay="CENTER" layoutX="147.0" layoutY="14.0" style="-fx-text-fill: #0f0d25; -fx-font-family: Arial; -fx-font-size: 30;" text="Inscription" textAlignment="JUSTIFY" />
-               <Button fx:id="button_register_register" layoutX="156.0" layoutY="237.0" mnemonicParsing="false" onAction="#tryRegister" text="S'inscrire" />
-               <Button fx:id="button_back_register" layoutX="160.0" layoutY="316.0" mnemonicParsing="false" onAction="#openLoginPage" style="-fx-background-color: #505050; -fx-text-fill: #ffffff;" text="Retours" />
-               <TextField fx:id="textfield_psswrd_register" layoutX="81.0" layoutY="123.0" prefHeight="39.0" prefWidth="254.0" promptText="Mot de passe" style="-fx-background-radius: 30;" />
-               <TextField fx:id="textfield_psswrd_confirm_register" layoutX="81.0" layoutY="184.0" prefHeight="39.0" prefWidth="254.0" promptText="Confirmation du mot de passe" style="-fx-background-radius: 30;" />
-            </children>
-         </Pane>
-      </children></AnchorPane>
+<Scene stylesheets="@../CSS/style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+    <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="820.0" prefWidth="1537.0">
+        <children>
+            <GridPane layoutX="31.0" layoutY="17.0" prefHeight="91.0" prefWidth="274.0">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="129.5333251953125" minWidth="10.0" prefWidth="100.73332214355469" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.40001678466797" minWidth="10.0" prefWidth="173.2666778564453" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                </rowConstraints>
+                <children>
+                    <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@../Images/logo.png" />
+                        </image>
+                    </ImageView>
+                    <Label id="statumun" text="Statumun" GridPane.columnIndex="1" />
+                </children>
+            </GridPane>
+            <GridPane layoutX="455.0" layoutY="60.0" prefHeight="700.0" prefWidth="628.0" style="-fx-background-color: #F4F4F4; -fx-background-radius: 43;">
+                <columnConstraints>
+                    <ColumnConstraints />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints maxHeight="119.20001373291015" minHeight="10.0" prefHeight="119.20001373291015" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="111.80000915527344" minHeight="10.0" prefHeight="75.79998626708985" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="92.80002441406248" minHeight="10.0" prefHeight="74.39999999999998" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="122.39999999999998" minHeight="10.0" prefHeight="122.39999999999998" vgrow="SOMETIMES" />
+                </rowConstraints>
+                <children>
+                    <TextField id="tf_inscription" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="465.0" promptText="Nom d'utilisateur" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                        <padding>
+                            <Insets left="20.0" />
+                        </padding>
+                    </TextField>
+                    <TextField id="tf_inscription" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="465.0" promptText="Mail" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
+                        <padding>
+                            <Insets left="20.0" />
+                        </padding>
+                    </TextField>
+                    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.valignment="TOP">
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        </rowConstraints>
+                        <children>
+                            <TextField maxWidth="-Infinity" prefHeight="60.0" prefWidth="228.0" promptText="Téléphone" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+                                <GridPane.margin>
+                                    <Insets right="4.5" />
+                                </GridPane.margin>
+                                <padding>
+                                    <Insets left="20.0" />
+                                </padding></TextField>
+                            <DatePicker maxWidth="-Infinity" prefHeight="60.0" prefWidth="228.0" promptText="Date d'anniversaire" GridPane.columnIndex="1" GridPane.valignment="TOP">
+                                <GridPane.margin>
+                                    <Insets left="4.5" />
+                                </GridPane.margin></DatePicker>
+                        </children>
+                    </GridPane>
+                    <Label id="title" text="Inscription" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                    <PasswordField maxWidth="-Infinity" prefHeight="60.0" prefWidth="465.0" promptText="Mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                        <padding>
+                            <Insets left="20.0" />
+                        </padding>
+                    </PasswordField>
+                    <PasswordField layoutX="91.0" layoutY="500.0" maxWidth="-Infinity" prefHeight="60.0" prefWidth="465.0" promptText="Confirmer le mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP">
+                        <padding>
+                            <Insets left="20.0" />
+                        </padding>
+                    </PasswordField>
+                    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="6">
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints maxHeight="43.8000244140625" minHeight="10.0" prefHeight="24.599987792968747" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="102.4" minHeight="10.0" prefHeight="97.60001220703126" vgrow="SOMETIMES" />
+                        </rowConstraints>
+                        <children>
+                            <CheckBox mnemonicParsing="false" text="Accepter les CGU" GridPane.halignment="CENTER" GridPane.valignment="TOP" />
+                            <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="307.0" text="S'inscrire" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                        </children>
+                    </GridPane>
+                </children>
+            </GridPane>
+        </children>
+    </AnchorPane>
 </Scene>
