--- a/src/assets/FXML/LoginScene.fxml
+++ b/src/assets/FXML/LoginScene.fxml
@@ -48,7 +48,7 @@
            </rowConstraints>
             <children>
                <Label id="title" text="Connexion" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-               <TextField id="textfield_username_connexion" fx:id="textfield_username_connexion" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="71.0" prefWidth="419.0" promptText="Mail" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+               <TextField fx:id="textfield_username_connexion" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="71.0" prefWidth="419.0" promptText="Mail" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                   <padding>
                      <Insets left="20.0" />
                   </padding>
@@ -56,17 +56,17 @@
                      <Insets top="30.0" />
                   </GridPane.margin>
                </TextField>
-               <Button id="button_login_connexion" fx:id="button_login_connexion" mnemonicParsing="false" onAction="#tryLogin" prefHeight="60.0" prefWidth="419.0" text="Se Connecter" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+               <Button fx:id="button_login_connexion" mnemonicParsing="false" onAction="#tryLogin" prefHeight="60.0" prefWidth="419.0" text="Se Connecter" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                   <GridPane.margin>
                      <Insets top="5.0" />
                   </GridPane.margin>
                </Button>
-               <Button id="button_register_connexion" fx:id="button_register_connexion" mnemonicParsing="false" onAction="#tryRegister" prefHeight="60.0" prefWidth="419.0" style="-fx-background-color: #C8C8C8;" text="S'inscrire" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP">
+               <Button fx:id="button_register_connexion" mnemonicParsing="false" onAction="#tryRegister" prefHeight="60.0" prefWidth="419.0" style="-fx-background-color: #C8C8C8;" text="S'inscrire" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP">
                   <GridPane.margin>
                      <Insets />
                   </GridPane.margin>
                </Button>
-               <PasswordField id="textfield_psswrd_connexion" fx:id="textfield_psswrd_connexion" maxWidth="-Infinity" prefHeight="71.0" prefWidth="419.0" promptText="Mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+               <PasswordField fx:id="textfield_psswrd_connexion" maxWidth="-Infinity" prefHeight="71.0" prefWidth="419.0" promptText="Mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                   <GridPane.margin>
                      <Insets />
                   </GridPane.margin>
