--- a/src/assets/FXML/LoginScene.fxml
+++ b/src/assets/FXML/LoginScene.fxml
@@ -53,12 +53,12 @@
                      <Insets left="20.0" />
                   </padding>
                   <GridPane.margin>
-                     <Insets top="30.0" />
+                     <Insets />
                   </GridPane.margin>
                </TextField>
                <Button fx:id="button_login_connexion" mnemonicParsing="false" onAction="#tryLogin" prefHeight="60.0" prefWidth="419.0" text="Se Connecter" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                   <GridPane.margin>
-                     <Insets top="5.0" />
+                     <Insets />
                   </GridPane.margin>
                </Button>
                <Button fx:id="button_register_connexion" mnemonicParsing="false" onAction="#tryRegister" prefHeight="60.0" prefWidth="419.0" style="-fx-background-color: #C8C8C8;" text="S'inscrire" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP">
@@ -66,7 +66,7 @@
                      <Insets />
                   </GridPane.margin>
                </Button>
-               <PasswordField fx:id="textfield_psswrd_connexion" maxWidth="-Infinity" prefHeight="71.0" prefWidth="419.0" promptText="Mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+               <PasswordField fx:id="textfield_psswrd_connexion" maxWidth="-Infinity" prefHeight="71.0" prefWidth="419.0" promptText="Mot de passe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP">
                   <GridPane.margin>
                      <Insets />
                   </GridPane.margin>
