--- a/src/assets/FXML/RegisterScene.fxml
+++ b/src/assets/FXML/RegisterScene.fxml
@@ -104,6 +104,11 @@
                         <children>
                             <CheckBox mnemonicParsing="false" text="Accepter les CGU" GridPane.halignment="CENTER" GridPane.valignment="TOP" />
                             <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="307.0" text="S'inscrire" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                     <Button id="back_button" mnemonicParsing="false" prefHeight="60.0" text="&lt; Retour" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                        <GridPane.margin>
+                           <Insets left="10.0" />
+                        </GridPane.margin>
+                     </Button>
                         </children>
                     </GridPane>
                 </children>
