--- a/src/assets/FXML/PopupInfo.fxml
+++ b/src/assets/FXML/PopupInfo.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -19,6 +19,6 @@
   </rowConstraints>
    <children>
       <Button fx:id="ouiButton_popupyon" mnemonicParsing="false" onAction="#handleOuiButton" prefHeight="48.0" prefWidth="85.0" style="-fx-background-color: #63FF61; -fx-border-radius: 30; -fx-background-radius: 30;" text="OK" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-      <Label fx:id="label_popupyon" prefHeight="133.0" prefWidth="283.0" text="a a aaa" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+      <TextArea fx:id="message_popup" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
    </children>
 </GridPane>
