--- a/src/assets/FXML/login.fxml
+++ b/src/assets/FXML/login.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="682.0" prefWidth="1116.0" stylesheets="@../CSS/current-styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
+<AnchorPane prefHeight="682.0" prefWidth="1116.0" stylesheets="@../CSS/login.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
       <FlowPane alignment="CENTER" columnHalignment="CENTER" layoutX="461.0" layoutY="216.0" prefHeight="200.0" prefWidth="200.0" styleClass="login-base" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -30,14 +30,14 @@
                         <Insets top="35.0" />
                      </VBox.margin>
                   </TextField>
-                  <PasswordField fx:id="textfield_psswrd_connexion" maxWidth="250.0" minHeight="36.0" promptText="Password" styleClass="login-inputs">
+                  <PasswordField fx:id="textfield_psswrd_connexion" maxWidth="250.0" minHeight="36.0" promptText="Mot de passe" styleClass="login-inputs">
                      <VBox.margin>
                         <Insets top="20.0" />
                      </VBox.margin>
                   </PasswordField>
                   <Button fx:id="button_login_connexion" mnemonicParsing="false" onAction="#tryLogin" text="Se Connecter">
                      <VBox.margin>
-                        <Insets top="20.0" />
+                        <Insets top="35.0" />
                      </VBox.margin>
                      <styleClass>
                         <String fx:value="login-button" />
@@ -62,7 +62,7 @@
       </FlowPane>
       <HBox alignment="CENTER_LEFT" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="43.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Images/logo.png" />
                </image>
@@ -70,7 +70,7 @@
                   <Insets left="20.0" top="10.0" />
                </HBox.margin>
             </ImageView>
-            <Label styleClass="login-title" text="Statumun">
+            <Label styleClass="statumun-title" text="Statumun">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
