--- a/src/assets/FXML/PopupYoN.fxml
+++ b/src/assets/FXML/PopupYoN.fxml
@@ -1,29 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="262.0" prefWidth="406.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="400.0" styleClass="anchorpane" stylesheets="@../CSS/popup.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PopupController">
    <children>
-      <HBox layoutY="300.0" prefHeight="100.0" prefWidth="600.0" />
-      <GridPane layoutX="-1.0" layoutY="202.0" prefHeight="60.0" prefWidth="406.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <VBox alignment="TOP_CENTER" prefHeight="229.0" prefWidth="400.0" styleClass="popup-box">
          <children>
-            <Button fx:id="ouiButton_popupyon" mnemonicParsing="false" onAction="#handleOuiButton" prefHeight="48.0" prefWidth="85.0" style="-fx-background-color: #63FF61; -fx-border-radius: 30; -fx-background-radius: 30;" text="OUI" GridPane.halignment="CENTER" />
-            <Button fx:id="nonButton_popupyon" mnemonicParsing="false" onAction="#handleNonButton" prefHeight="48.0" prefWidth="85.0" style="-fx-background-color: #FF6161; -fx-border-radius: 30; -fx-background-radius: 30;" text="NON" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+            <Label fx:id="message_popup" alignment="TOP_CENTER" prefHeight="162.0" prefWidth="328.0" styleClass="popup-box-text" textAlignment="CENTER">
+               <padding>
+                  <Insets top="15.0" />
+               </padding>
+            </Label>
+            <GridPane prefHeight="50.0" prefWidth="398.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Button fx:id="ouiButton_popupyon" mnemonicParsing="false" onAction="#handleOuiButton" prefHeight="42.0" prefWidth="75.0" styleClass="popup-box-button" text="Oui" GridPane.halignment="CENTER" />
+                  <Button fx:id="ouiButton_popupyon1" mnemonicParsing="false" onAction="#handleNonButton" prefHeight="42.0" prefWidth="75.0" text="Non" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                     <styleClass>
+                        <String fx:value="popup-box-button" />
+                        <String fx:value="popup-box-button-no" />
+                     </styleClass>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </GridPane>
          </children>
-      </GridPane>
-      <TextArea fx:id="message_popup" prefHeight="200.0" prefWidth="406.0" />
+      </VBox>
    </children>
 </AnchorPane>
