--- a/src/assets/FXML/PopupYoN.fxml
+++ b/src/assets/FXML/PopupYoN.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="400.0" styleClass="anchorpane" stylesheets="@../CSS/popup.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="400.0" styleClass="anchorpane" stylesheets="@../CSS/popup.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="TOP_CENTER" prefHeight="229.0" prefWidth="400.0" styleClass="popup-box">
          <children>
-            <Label fx:id="message_popup" alignment="TOP_CENTER" prefHeight="162.0" prefWidth="328.0" styleClass="popup-box-text" textAlignment="CENTER">
+            <Label alignment="TOP_CENTER" prefHeight="162.0" prefWidth="328.0" styleClass="popup-box-text" textAlignment="CENTER">
                <padding>
                   <Insets top="15.0" />
                </padding>
@@ -29,7 +29,7 @@
                </rowConstraints>
                <children>
                   <Button fx:id="ouiButton_popupyon" mnemonicParsing="false" onAction="#handleOuiButton" prefHeight="42.0" prefWidth="75.0" styleClass="popup-box-button" text="Oui" GridPane.halignment="CENTER" />
-                  <Button fx:id="ouiButton_popupyon1" mnemonicParsing="false" onAction="#handleNonButton" prefHeight="42.0" prefWidth="75.0" text="Non" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <Button fx:id="ouiButton_popupyon1" mnemonicParsing="false" onAction="#handleOuiButton" prefHeight="42.0" prefWidth="75.0" text="Non" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <styleClass>
                         <String fx:value="popup-box-button" />
                         <String fx:value="popup-box-button-no" />
